Pass memcached port to Exchange and Networks stacks

--- a/stacks/container-apps/exchange.prx.org.yml
+++ b/stacks/container-apps/exchange.prx.org.yml
@@ -39,6 +39,8 @@ Parameters:
   # Misc #######################################################################
   SharedMemcachedEndpointAddress:
     Type: String
+  SharedMemcachedEndpointPort:
+    Type: String
   OpsDebugMessagesSnsTopicArn:
     Type: String
   OpsErrorMessagesSnsTopicArn:
