--- a/stacks/container-apps/networks.prx.org.yml
+++ b/stacks/container-apps/networks.prx.org.yml
@@ -39,6 +39,8 @@ Parameters:
   # Misc #######################################################################
   SharedMemcachedEndpointAddress:
     Type: String
+  SharedMemcachedEndpointPort:
+    Type: String
   OpsDebugMessagesSnsTopicArn:
     Type: String
   OpsErrorMessagesSnsTopicArn:
