Pass memcached values to Exchange say when stack

--- a/stacks/container-apps/exchange-say-when.yml
+++ b/stacks/container-apps/exchange-say-when.yml
@@ -19,6 +19,10 @@ Parameters:
     Type: String
   EcrImageTag:
     Type: String
+  SharedMemcachedEndpointAddress:
+    Type: String
+  SharedMemcachedEndpointPort:
+    Type: String
   # App ENV #################################################################
   AppName:
     Type: String # castle, crier, cms, feeder
@@ -56,6 +60,10 @@ Resources:
               Value: !Ref AWS::Region
             - Name: SAY_WHEN_THREAD
               Value: "true"
+            - Name: MEMCACHED_PORT_11211_TCP_ADDR
+              Value: !Ref SharedMemcachedEndpointAddress
+            - Name: MEMCACHED_PORT_11211_TCP_PORT
+              Value: !Ref SharedMemcachedEndpointPort
           Essential: true
           Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/${AppName}.prx.org:${EcrImageTag}
           LogConfiguration:
