--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -202,6 +202,8 @@ Resources:
         ContainerMemory: !Ref ContainerMemory
         ContainerMemoryReservation: !Ref ContainerMemoryReservation
         ContainerCpu: !Ref ContainerCpu
+        SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
+        SharedMemcachedEndpointPort: !Ref SharedMemcachedEndpointPort
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
