Pass memcached values to Networks Sphinx stack

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -315,6 +315,8 @@ Resources:
         HealthCheckPath: "/sessions/new"
         SecretsInstanceDecryptPolicyArn: !Ref SecretsInstanceDecryptPolicyArn
         SecretsInstanceAccessPolicyArn: !Ref SecretsInstanceAccessPolicyArn
+        SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
+        SharedMemcachedEndpointPort: !Ref SharedMemcachedEndpointPort
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
