--- a/stacks/container-apps/sphinx-nlb.yml
+++ b/stacks/container-apps/sphinx-nlb.yml
@@ -51,6 +51,10 @@ Parameters:
     Type: String
   SecretsInstanceAccessPolicyArn:
     Type: String
+  SharedMemcachedEndpointAddress:
+    Type: String
+  SharedMemcachedEndpointPort:
+    Type: String
   # App ENV #################################################################
   AppName:
     Type: String # castle, crier, cms, feeder
@@ -426,6 +430,10 @@ Resources:
               Value: !Ref AWS::Region
             - Name: LOCAL_SPHINX
               Value: "true"
+            - Name: MEMCACHED_PORT_11211_TCP_ADDR
+              Value: !Ref SharedMemcachedEndpointAddress
+            - Name: MEMCACHED_PORT_11211_TCP_PORT
+              Value: !Ref SharedMemcachedEndpointPort
           Essential: true
           Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/networks.prx.org:${EcrImageTag}
           LogConfiguration:
