Add ListBucketVersions policy to devops role

--- a/devops/aws-management/devops-cross-account-access-role.yml
+++ b/devops/aws-management/devops-cross-account-access-role.yml
@@ -102,6 +102,17 @@ Resources:
               - codepipeline:GetPipelineState
             Resource:
               - "*"
+  S3ListVersionsPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+              - s3:ListBucketVersions
+            Resource:
+              - "*"
 
   CrossAccountAccessRole:
     Type: AWS::IAM::Role
@@ -128,6 +139,7 @@ Resources:
         - !Ref CodePipelineStartPipelineApprovalResultPolicy
         - !Ref CodePipelineTransitionChangePolicy
         - !Ref CodePipelineReadPolicy
+        - !Ref S3ListVersionsPolicy
       RoleName: !Sub ${CrossAccountAccessRoleName}
       Tags:
         - Key: Project
