Use regional SNS client

--- a/devops/aws-management/cd/template.yml
+++ b/devops/aws-management/cd/template.yml
@@ -543,7 +543,10 @@ Resources:
       InlineCode: |
         const AWS = require('aws-sdk');
 
-        const sns = new AWS.SNS({ apiVersion: '2010-03-31' });
+        const sns = new AWS.SNS({
+          apiVersion: '2010-03-31',
+          region: process.env.SLACK_MESSAGE_RELAY_TOPIC_ARN.split(':')[3]
+        });
 
         exports.handler = async (event) => {
           console.log(JSON.stringify(event));
@@ -554,7 +557,7 @@ Resources:
                 channel: '#ops-deploys',
                 username: 'AWS CodePipeline',
                 icon_emoji: ':ops-codepipeline:',
-                text: 'DevOps pipeline deploy complete'
+                text: 'The DevOps pipeline, in `prx-main`, finished deploying.'
               }),
             })
             .promise();
