Add config copy policy to DevOps role

--- a/devops/aws-management/devops-cross-account-access-role.yml
+++ b/devops/aws-management/devops-cross-account-access-role.yml
@@ -113,6 +113,26 @@ Resources:
               - s3:ListBucketVersions
             Resource:
               - "*"
+  S3TemplateConfigCopyPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Action:
+              - s3:ListBucket
+            Effect: Allow
+            Resource:
+              - "*"
+          - Action:
+              - s3:GetObject
+              - s3:GetObjectVersion
+              - s3:GetObjectTagging
+              - s3:PutObject
+              - s3:PutObjectTagging
+            Effect: Allow
+            Resource:
+              - arn:aws:s3:::*/template-config-staging.zip
 
   CrossAccountAccessRole:
     Type: AWS::IAM::Role
@@ -140,6 +160,7 @@ Resources:
         - !Ref CodePipelineTransitionChangePolicy
         - !Ref CodePipelineReadPolicy
         - !Ref S3ListVersionsPolicy
+        - !Ref S3TemplateConfigCopyPolicy
       RoleName: !Sub ${CrossAccountAccessRoleName}
       Tags:
         - Key: Project
