Add retain policy to widely-used Slack relay SNS topic

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -60,6 +60,16 @@ Resources:
   # Slack message relay
   SlackMessageRelaySnsTopic:
     Type: AWS::SNS::Topic
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
+    Properties:
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   SlackMessageRelaySnsTopicPolicy:
     Type: AWS::SNS::TopicPolicy
     Properties:
