Remove unused parameter

--- a/db/elasticache-memcached.yml
+++ b/db/elasticache-memcached.yml
@@ -1,4 +1,17 @@
 # db/elasticache-memcached.yml
+#
+# TODO This template is not currenly in use, and could use a bit of refactoring
+# if it ever is needed again. Mainly it always creates a security group that
+# allows inbound traffic from everywhere, which in many cases is not what
+# we'd want, since a lot of our VPCs allow internet traffic.
+#
+#
+#
+#
+#
+#
+#
+#
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >-
   AWS CloudFormation Memcached Template: Template to create Elasticache Memcached cluster
@@ -63,7 +76,6 @@ Resources:
   ElasticacheSubnetGroup:
     Type: "AWS::ElastiCache::SubnetGroup"
     Properties:
-      CacheSubnetGroupName: !Sub Platform-${EnvironmentType}-${AWS::StackName}-cache
       Description: !Ref EnvironmentType
       SubnetIds:
         - Fn::ImportValue: !Sub ${VPCStack}-Subnet1
@@ -92,7 +104,7 @@ Resources:
       Engine: "memcached"
       CacheNodeType: !Ref CacheNodeType
       NumCacheNodes: !Ref NumCacheNodes
-      CacheSubnetGroupName: !Sub Platform-${EnvironmentType}-${AWS::StackName}-cache
+      CacheSubnetGroupName: !Ref ElasticacheSubnetGroup
       VpcSecurityGroupIds:
         - !GetAtt ElasticacheSecurityGroup.GroupId
       Tags:
