Add stack parameter replays to Slack app
Closes #492

--- a/notifications/slack/template.yml
+++ b/notifications/slack/template.yml
@@ -24,6 +24,12 @@ Parameters:
     Type: String
   DevOpsSlackUserIds:
     Type: String
+  PrxLegacyAccountId:
+    Type: String
+  InfrastructureConfigBucket:
+    Type: String
+  InfrastructureConfigStagingKey:
+    Type: String
 Resources:
   HttpApi:
     Type: AWS::Serverless::HttpApi
@@ -87,6 +93,9 @@ Resources:
           AWS_ORGANIZATION_CROSS_ACCOUNT_SHARING_ROLE_ARN: !Ref AwsOrganizationCrossAccountSharingRoleArn
           DEVOPS_CROSS_ACCOUNT_ACCESS_ROLE_NAME: !Ref DevOpsCrossAccountAccessRoleName
           DEVOPS_SLACK_USER_IDS: !Ref DevOpsSlackUserIds
+          PRX_LEGACY_ACCOUNT_ID: !Ref PrxLegacyAccountId
+          INFRASTRUCTURE_CONFIG_BUCKET: !Ref InfrastructureConfigBucket
+          INFRASTRUCTURE_CONFIG_STAGING_KEY: !Ref InfrastructureConfigStagingKey
       Events:
         EventRequest:
           Properties:
