Add custom resources stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -350,6 +350,21 @@ Resources:
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/container-apps/root.yml"]]
       TimeoutInMinutes: 5
+  CustomResourcesStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
+      Parameters:
+        InfrastructureNotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+      Tags:
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/custom-resources/root.yml"]]
+      TimeoutInMinutes: 5
   # App and shared resource stacks
   VPCStack:
     Type: AWS::CloudFormation::Stack
