Pass SMTP service token to Exchange stack

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -22,6 +22,8 @@ Parameters:
     Type: String
   SharedMemcachedEndpointPort:
     Type: String
+  AmazonSesSmtpCredentialsGeneratorServiceToken:
+    Type: String
   # Secrets ####################################################################
   SecretsInstanceDecryptPolicyArn:
     Type: String
@@ -156,6 +158,7 @@ Resources:
         UploadSigningAccessKeyId: !Ref UploadSigningAccessKeyId
         SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
         SharedMemcachedEndpointPort: !Ref SharedMemcachedEndpointPort
+        AmazonSesSmtpCredentialsGeneratorServiceToken: !Ref AmazonSesSmtpCredentialsGeneratorServiceToken
         OpsDebugMessagesSnsTopicArn:
           Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
