Prevent alarm name conflicts

--- a/stacks/container-apps/exchange.prx.org.yml
+++ b/stacks/container-apps/exchange.prx.org.yml
@@ -437,7 +437,6 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TaskDefinition: !Ref WorkerTaskDefinition
-
   SesSendingUser:
     Type: AWS::IAM::User
     Properties:
@@ -523,7 +522,7 @@ Resources:
     Condition: CreateWorkerResources
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[Exchange][Worker][AS:In] ${EnvironmentType} Scale In"
+      AlarmName: !Sub "[Exchange][Worker][AS:In] - ${EnvironmentType} Scale In"
       AlarmActions:
         - !Ref ExchangeWorkerAutoScalingInPolicy
       AlarmDescription: Scale in exchange workers
@@ -563,7 +562,7 @@ Resources:
     Condition: CreateWorkerResources
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[Exchange][Worker][AS:Out] ${EnvironmentType} Scale Out"
+      AlarmName: !Sub "[Exchange][Worker][AS:Out] - ${EnvironmentType} Scale Out"
       AlarmActions:
         - !Ref ExchangeWorkerAutoScalingOutPolicy
       AlarmDescription: Scale out exchange workers
@@ -584,7 +583,7 @@ Resources:
     Condition: CreateWorkerResources
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[Exchange][Worker][SQS] ${EnvironmentType} Deliveries Not Processing"
+      AlarmName: !Sub "[Exchange][Worker][SQS] - ${EnvironmentType} Deliveries Not Processing"
       AlarmActions:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       InsufficientDataActions:
@@ -608,7 +607,7 @@ Resources:
     Condition: CreateWorkerResources
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[Exchange][Worker][SQS] ${EnvironmentType} SayWhen Not Processing"
+      AlarmName: !Sub "[Exchange][Worker][SQS] - ${EnvironmentType} SayWhen Not Processing"
       AlarmActions:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       InsufficientDataActions:
