Move some Exchange parameters out of the container stack

--- a/stacks/container-apps/exchange.prx.org.yml
+++ b/stacks/container-apps/exchange.prx.org.yml
@@ -63,6 +63,7 @@ Parameters:
     Type: String
   CreateWorker:
     Type: String
+    Default: "true"
   DesiredWebs:
     Type: String
     Default: 2
@@ -71,19 +72,20 @@ Parameters:
     Default: 1
   DesiredWebsProduction:
     Type: String
-    Default: 2
+    Default: "5"
   DesiredWorkersProduction:
     Type: String
-    Default: 1
+    Default: "6"
   ErrorAlarmThreshold:
     Type: String
-    Default: 0
+    Default: "5"
   # App ENV #################################################################
   AppName:
     Type: String # castle, crier, cms, feeder
+    Default: exchange
   AltName:
     Type: String
-    Default: ""
+    Default: "api"
   ExplicitHostHeader:
     Type: String
     Default: ""
@@ -91,7 +93,7 @@ Parameters:
     Type: String
   ContainerPort:
     Type: String
-    Default: 3000
+    Default: "3000"
   ContainerMemory:
     Type: String
     Default: 500
@@ -106,7 +108,7 @@ Parameters:
     Default: web
   HealthCheckPath:
     Type: String
-    Default: /api/v1
+    Default: /ping
 
 Mappings:
   EnvironmentTypeMap:
